mobile view discount section fixed title height issue ,vieww all button alignment,sticky floting  count alignment, footer gap

--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -750,7 +750,7 @@ h3 {
     flex-direction: column !important;
     align-items: center !important;
     text-align: center !important;
-    gap: 10px !important;
+    gap: 2px !important;
     display: flex !important;
   }
 
